--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 3.13)
-
+cmake_minimum_required(VERSION 3.21)
 project(overflow)
+set(CMAKE_CXX_STANDARD 17)
 
 add_compile_options(-Wall -Wextra -Wpedantic)
 
@@ -10,3 +10,9 @@ if (WITH_TESTS)
     find_package(GTest REQUIRED)
     set(BUILD_TESTS ON)
 endif()
+
+add_subdirectory(lib/datalib)
+
+add_executable(main src/main.cpp)
+
+target_link_libraries(main datalib)
