--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,13 @@
-cmake_minimum_required(VERSION 3.20)
+cmake_minimum_required(VERSION 3.16)
 project(Parser)
 
 set(CMAKE_CXX_STANDARD 14)
 
-if(WITH_TESTS OR WITH_SANITIZERS OR WITH_COVERAGE)
-    enable_testing()
-    find_package(GTest REQUIRED)
-    set(BUILD_TESTS ON)
-endif()
+#if(WITH_TESTS OR WITH_SANITIZERS OR WITH_COVERAGE)
+#    enable_testing()
+#    find_package(GTest REQUIRED)
+#    set(BUILD_TESTS ON)
+#endif()
 
 enable_testing()
 find_package(GTest REQUIRED)
@@ -15,11 +15,11 @@ set(BUILD_TESTS ON)
 
 find_package(CURL)
 find_package(RapidJSON)
+find_package(Boost)
 
-add_subdirectory(lib/Load_to_db)
-add_subdirectory(lib/Read_Json)
-add_subdirectory(lib/Read_URLS)
-add_subdirectory(lib/Parser_Apartments)
+add_subdirectory(lib/JsonReader)
+add_subdirectory(lib/UrlsReader)
+add_subdirectory(lib/ArgumentsParser)
 
 add_executable(Parser src/main.cpp)
-target_link_libraries(Parser CURL::libcurl rapidjson Parser_Apartments)
+target_link_libraries(Parser CURL::libcurl rapidjson ArgumentsParser)
