--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,38 +4,11 @@ project(OverflowProject)
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_CXX STANDARD 14)
 
-set(SOURCE_DIR src)
-set(HEADERS_DIR include)
+message("Добавляю Selector")
+add_subdirectory(lib/Selector)
 
-add_compile_options(-Wall -Wextra -pedantic)
+add_subdirectory(lib/Front)
+add_executable(main src/main.cpp)
+target_link_libraries(main Front)
 
-if (CMAKE_BUILD_TYPE=Release)
-    add_compile_options(-O3)
-elseif(CMAKE_BUILD_TYPE=Debug)
-    add_compile_options(-g)
-endif()
-
-if (COVERAGE)
-    add_compile_options(--coverage)
-    add_link_options(--coverage)
-endif()
-
-if (WPADDED)
-    add_compile_options(-Wpadded)
-endif()
-
-if (TESTS OR SANITIZERS OR COVERAGE OR VALGRIND)
-    find_package(GTest REQUIRED)
-    enable_testing()
-    set(BUILD_TESTS 1)
-endif()
-
-add_executable(main ${SOURCE_DIR}/main.cpp ${SOURCE_DIR}/home.cpp ${SOURCE_DIR}/settings.cpp ${SOURCE_DIR}/menu.cpp)
-if (CMAKE_BUILD_TYPE STREQUAL Release)
-    message("Использую WebToolkit [Release]...")
-    target_link_libraries(main wt wthttp)
-elseif(CMAKE_BUILD_TYPE STREQUAL Debug)
-    message("Использую WebToolkit [Debug]...")
-    target_link_libraries(main wtd wthttpd)
-endif()
 target_include_directories(main PUBLIC ${HEADERS_DIR})
