--- a/lib/Front/tests/CMakeLists.txt
+++ b/lib/Front/tests/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_executable(test_frontend src/test.cpp)
-target_link_libraries(test_frontend wt wthttp)
 target_include_directories(test_frontend PUBLIC include)
+target_link_libraries(test_frontend wt wthttp Front GTest::Main)
 add_test(NAME test_frontend COMMAND test_frontend)
