Исправлен FlatSelector (проблема наличия указателя на удаленный объект).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 project("OverflowProject")
 cmake_minimum_required(VERSION 3.21)
 
+add_compile_options(-g)
+
 add_subdirectory(lib/datalib)
 add_subdirectory(lib/Parser)
 add_subdirectory(lib/Selector)
