--- a/lib/Parser/lib/UrlsReader/CMakeLists.txt
+++ b/lib/Parser/lib/UrlsReader/CMakeLists.txt
@@ -3,6 +3,6 @@ add_library(UrlsReader src/UrlsReader.cpp)
 target_include_directories(UrlsReader PUBLIC include)
 target_link_libraries(UrlsReader CURL::libcurl)
 
-#if (BUILD_TESTS)
+if (BUILD_TESTS)
     add_subdirectory(tests)
-#endif()
+endif()
