--- a/lib/datalib/tests/CMakeLists.txt
+++ b/lib/datalib/tests/CMakeLists.txt
@@ -1,11 +1,6 @@
-add_executable(test_datalib src/test_database_params.cpp
-                            src/test_flat.cpp
-                            src/test_pg_database.cpp
-                            src/test_user.cpp)
+add_executable(test_datalib src/test_flat.cpp
+                            src/test_sqlite_database.cpp)
 
-target_link_libraries(test_datalib database_params
-                                   flat
-                                   pg_database
-                                   user
+target_link_libraries(test_datalib datalib
                                    GTest::Main)
 add_test(NAME test_datalib COMMAND test_datalib)
