add cond to include sqlite

--- a/lib/datalib/CMakeLists.txt
+++ b/lib/datalib/CMakeLists.txt
@@ -5,8 +5,15 @@ add_library(datalib src/sqlite_database.cpp
 
 target_include_directories(datalib PUBLIC include)
 
-find_package(SQLite3 REQUIRED)
+if (WIN32)
+    target_include_directories(datalib PUBLIC C:/sqlite)
+    target_link_directories(datalib PUBLIC C:/sqlite)
+elseif(UNIX)
+    find_package(SQLite3 REQUIRED)
+endif()
+
 target_link_libraries(datalib sqlite3)
+
 
 if(BUILD_TESTS)
     add_subdirectory(tests)
