--- a/lib/Parser/lib/ArgumentsParser/CMakeLists.txt
+++ b/lib/Parser/lib/ArgumentsParser/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_library(ArgumentsParser src/ArgumentsParser.cpp)
 
 target_include_directories(ArgumentsParser PUBLIC include)
-target_link_libraries(ArgumentsParser CURL::libcurl rapidjson JsonReader UrlsReader datalib)
+target_link_libraries(ArgumentsParser CURL::libcurl JsonReader UrlsReader datalib)
 
 if(BUILD_TESTS)
     add_subdirectory(tests)
