fix techer's ussues

--- a/lib/datalib/tests/CMakeLists.txt
+++ b/lib/datalib/tests/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_executable(test_datalib src/test_flat.cpp
-                            src/test_sqlite_database.cpp)
+add_executable(test_datalib
+        src/test_sqlite_database.cpp)
 
 target_link_libraries(test_datalib datalib
                                    GTest::Main)
