--- a/lib/Parser/lib/JsonReader/CMakeLists.txt
+++ b/lib/Parser/lib/JsonReader/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(JsonReader src/JsonReader.cpp)
 
 target_include_directories(JsonReader PUBLIC include)
+target_link_libraries(JsonReader)
 
 if (BUILD_TESTS)
     add_subdirectory(tests)
