--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,3 +12,13 @@ jobs:
         command: |
           sudo pacman -Syyu
           sudo pacman --noconfirm -S gtest wt cmake boost rapidjson
+    - name: Ngrok Tunneling
+      uses: vmactions/ngrok-tunnel@v0.0.1
+      with:
+        # tcp or http
+        protocol: http # optional
+        # port to forward to
+        port: 9090
+        command: |
+          ls
+      
