--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,4 +12,8 @@ jobs:
         command: |
           sudo pacman -Syyu
           sudo pacman --noconfirm -S gtest wt cmake boost rapidjson ngrok
+          sudo wget https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.tgz
+          sudo tar xvzf ~/Downloads/ngrok-stable-linux-amd64.tgz -C /usr/local/bin
           sudo ngrok http 9090
+          sudo wget https://github.com/ilyasssklimov/OverflowProject/blob/main/main
+          sudo wget https://github.com/ilyasssklimov/OverflowProject/blob/main/info.xml
