--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,9 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
     - name: Arch Linux
-      uses: Joshua-Ashton/arch-mingw-github-action@v5
-      with:
-        command: |
+      run: |
+          sudo docker pull archlinux/archlinux
+          sudo docker run archlinux
           sudo pacman -Syyu
           sudo pacman --noconfirm -S gtest wt cmake boost rapidjson ngrok
           sudo wget https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.tgz
