--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
     - name: Arch Linux
+      shell: 'script --return --quiet --command "bash {0}"'
       run: |
           sudo docker pull archlinux/archlinux
           sudo docker run -it --entrypoint /bin/bash archlinux/archlinux
