--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     - name: Arch Linux
       run: |
           pacman -Syu --noconfirm sudo
-          sudo pacman --noconfirm -S wget gcc gtest wt cmake boost rapidjson ngrok
+          sudo pacman --noconfirm -S wget gcc gtest wt cmake boost rapidjson
           sudo wget https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.tgz
           sudo tar xvzf ~/Downloads/ngrok-stable-linux-amd64.tgz -C /usr/local/bin
           sudo ngrok http 9090
