--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,8 @@ jobs:
           sudo pacman --noconfirm -S wget gcc gtest wt cmake boost rapidjson
           sudo wget https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.tgz
           sudo tar xvzf ngrok-stable-linux-amd64.tgz -C /usr/local/bin
-          sudo ngrok http 9090
+          sudo ngrok http 9090 &
           sudo wget https://github.com/ilyasssklimov/OverflowProject/blob/main/main
           sudo wget https://github.com/ilyasssklimov/OverflowProject/blob/main/info.xml
+          sudo chmod +x ./main
+          sudo ./main --docroot . --http-listen 0.0.0.0 --http-port 9090
