--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,5 @@
 name: CI
-on:
-  # Trigger the workflow on push or pull request,
-  # but only for the main branch
-  push:
-    branches:
-      - frontend
+on: workflow_dispatch
 jobs:
   build:
     runs-on: ubuntu-18.04
