--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,13 +8,16 @@ jobs:
     - name: Setup
       run: |
           pacman -Syu --noconfirm sudo
-          sudo pacman --noconfirm -S wget wt
+          sudo pacman --noconfirm -S wget wt curl
           sudo wget https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.tgz
           sudo wget https://github.com/ilyasssklimov/OverflowProject/blob/main/main?raw=true -O main > /dev/null
           sudo wget https://github.com/ilyasssklimov/OverflowProject/blob/main/info.xml?raw=true -O info.xml > /dev/null
           sudo chmod +x ./main
           sudo tar xvzf ngrok-stable-linux-amd64.tgz -C /usr/local/bin
           sudo ngrok authtoken bVGXV29rGqZaA2dd79tL_MR5BzrT33v1MTkgeMKMw
+    - name: Server IP
+      run: |
+          sudo curl ipinfo.io/ip
     - name: Run server
       run: |
           sudo ngrok http --log=stdout --log-level=debug 9090 &
