--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -12,4 +12,7 @@ jobs:
     - uses: actions/checkout@v2.4.0
     - name: Build
       run: |
-          sudo cmake $GITHUB_WORKSPACE/CmakeLists.txt --target main
+          sudo mkdir $GITHUB_WORKSPACE/build
+          sudo cd $GITHUB_WORKSPACE/build
+          sudo cmake .. --build .
+          sudo make main
