--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -14,5 +14,5 @@ jobs:
       run: |
           sudo mkdir $GITHUB_WORKSPACE/build
           cd $GITHUB_WORKSPACE/build
-          sudo cmake .. --build .
+          sudo cmake ..
           sudo make main
