--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -21,6 +21,6 @@ jobs:
           sudo git config --global user.email 'buildbot@github.com'
           sudo git switch -c build
           sudo cp -rf ~/build build
-          sudo git add build
+          sudo git add -f build
           sudo git commit -am "Automated build"
           sudo git push origin build
